- Select the constructor for a resource classe that has the most parameters
  that has the most instances are available for those parameters.
- Support constructors with parameters on singleton resource classes.
- Fixed issue 79
  https://jersey.dev.java.net/issues/show_bug.cgi?id=79
  ';' separated package names and classpaths specified in the web.xml are
  trimmed.
- Integrated JSR 311 API 0.9
  - Path parameters match 1 or more characters that are not '/' 
    (previously it was zero or more of any character), unless the final 
     parameter is unlimited, in which case it is the same as before.
  - Path parameter names are matching with the following regex:
      "\{([\w[-\w\.]*)\}"
  - com.sun.jersey.api.representation.FormParam has been deleted. Use
    javax.ws.rs.FormParam instead.
  - javax.ws.rs.ConsumeMime and javax.ws.rs.ProduceMime have been renamed
    to javax.ws.rs.Consumes and javax.ws.rs.Produces respectively.
  - Resource methods may return generic types, such as List<String>, and
    an appropriate MessageBodyWriter, for that generic type may be selected.
    - When using Response.Builder an instance of javax.ws.rs.core.GenericEntity
      may be set as the entity to preserve the generic type.
  - ContextResolver can be scoped per @Produces annotated on a
    implementation.
    - Scope ContextResolver instances are accessible via the 
      javax.ws.rs.ext.Providers interface.

release 0.8 (2008-06-20)
- UriBuilder supports opaque URIs such as "mailto:p@c".
- Support the reading of an entity delcared as the type Object using JAXB
  unmarshalling. It is required that there be a ContextResolver<JAXBContext>
  that supports a JAXBContext for the Object type.
- The following properties can be set on the client:
    Read timeout, connection timeout, chunked encoding length and 
    following redirections.
  See setter methods on com.sun.jersey.api.client.ClientConfig and
  properties on com.sun.jersey.api.client.config.ClientConfig.